objects/Welcome_Letter__c.object
<CustomObject>
    <fields>
        <fullName>BypassProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Date__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Date__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Datum</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Old_Begr_ungsschreiben_ID__c</fullName>
        <label>Old Begrüßungsschreiben ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Vehicle_Brand_Id__c</fullName>
        <formula>Opportunity__r.Vehicle_Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Vehicle Brand Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Anfrage</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Begrüßungsschreiben</relationshipLabel>
        <relationshipName>Welcome_Letters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Priorit_tsstufe__c</fullName>
        <formula>Opportunity__r.Priority_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prioritätsstufe</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Produkt__c</fullName>
        <formula>Opportunity__r.Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Produkt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rechtsschutzversicherung_vorhanden__c</fullName>
        <formula>Opportunity__r.Has_Legal_Protection_Insurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rechtsschutzversicherung vorhanden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Welcome_Letter_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <formula>Opportunity__r.Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test</label>
        <type>Checkbox</type>
    </fields>
    <label>Begrüßungsschreiben</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Begrüßungsschreiben</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Alle_Begr_ungsschreiben</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>Date__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Stage__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Rechtsschutzversicherung_vorhanden__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rechtsschutzversicherung_vorhanden__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Opportunity_Name__c</field>
            <operation>notContain</operation>
            <value>Test</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>9/11/2018</value>
        </filters>
        <label>Alle_Begrüßungsschreiben</label>
    </listViews>
    <listViews>
        <fullName>Alle_Begr_ungsschreiben_DG_mit_RSV</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 and 6 AND 7</booleanFilter>
        <columns>Date__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Stage__c</columns>
        <columns>Produkt__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rechtsschutzversicherung_vorhanden__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Opportunity_Name__c</field>
            <operation>notContain</operation>
            <value>Test</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/29/2019</value>
        </filters>
        <filters>
            <field>Produkt__c</field>
            <operation>equals</operation>
            <value>Dieselskandal</value>
        </filters>
        <filters>
            <field>Opportunity_Stage__c</field>
            <operation>contains</operation>
            <value>Check</value>
        </filters>
        <label>Alle_Begrüßungsschreiben DG mit RSV</label>
    </listViews>
    <listViews>
        <fullName>Alle_Begr_ungsschreiben_DG_ohne_RSV</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 and 6 AND 7</booleanFilter>
        <columns>Date__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Stage__c</columns>
        <columns>Produkt__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rechtsschutzversicherung_vorhanden__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Opportunity_Name__c</field>
            <operation>notContain</operation>
            <value>Test</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>9/11/2018</value>
        </filters>
        <filters>
            <field>Produkt__c</field>
            <operation>equals</operation>
            <value>Dieselskandal</value>
        </filters>
        <filters>
            <field>Opportunity_Stage__c</field>
            <operation>contains</operation>
            <value>New,Check</value>
        </filters>
        <label>Alle_Begrüßungsschreiben DG ohne RSV</label>
    </listViews>
    <listViews>
        <fullName>Alle_Begr_ungsschreiben_LV_mit_RSV</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 and 6 AND 7</booleanFilter>
        <columns>Date__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Stage__c</columns>
        <columns>Produkt__c</columns>
        <columns>Priorit_tsstufe__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rechtsschutzversicherung_vorhanden__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Opportunity_Name__c</field>
            <operation>notContain</operation>
            <value>Test</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>9/11/2018</value>
        </filters>
        <filters>
            <field>Produkt__c</field>
            <operation>equals</operation>
            <value>Lebensversicherung</value>
        </filters>
        <filters>
            <field>Opportunity_Stage__c</field>
            <operation>contains</operation>
            <value>Check</value>
        </filters>
        <label>Alle_Begrüßungsschreiben_LV mit RSV</label>
    </listViews>
    <listViews>
        <fullName>Alle_Begr_ungsschreiben_LV_ohne_RSV</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 and 6 AND 7 AND 8</booleanFilter>
        <columns>Date__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Stage__c</columns>
        <columns>Produkt__c</columns>
        <columns>Priorit_tsstufe__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rechtsschutzversicherung_vorhanden__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Opportunity_Name__c</field>
            <operation>notContain</operation>
            <value>Test</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>9/11/2018</value>
        </filters>
        <filters>
            <field>Produkt__c</field>
            <operation>equals</operation>
            <value>Lebensversicherung</value>
        </filters>
        <filters>
            <field>Opportunity_Stage__c</field>
            <operation>contains</operation>
            <value>Check</value>
        </filters>
        <filters>
            <field>Priorit_tsstufe__c</field>
            <operation>equals</operation>
            <value>I,II</value>
        </filters>
        <label>Alle_Begrüßungsschreiben_LV ohne RSV</label>
    </listViews>
    <listViews>
        <fullName>Alle_Begr_ungsschreiben_mit_RSV</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>Date__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Stage__c</columns>
        <columns>Produkt__c</columns>
        <columns>Priorit_tsstufe__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rechtsschutzversicherung_vorhanden__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Opportunity_Name__c</field>
            <operation>notContain</operation>
            <value>Test</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2019</value>
        </filters>
        <filters>
            <field>Opportunity_Stage__c</field>
            <operation>contains</operation>
            <value>New,Check</value>
        </filters>
        <label>Alle_Begrüßungsschreiben mit RSV</label>
    </listViews>
    <listViews>
        <fullName>K_Begr_ungsschreiben</fullName>
        <columns>Date__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rechtsschutzversicherung_vorhanden__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Opportunity_Name__c</field>
            <operation>notContain</operation>
            <value>Test</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>9/11/2018</value>
        </filters>
        <label>K_Begrüßungsschreiben</label>
    </listViews>
</CustomObject>